<resources>
    <string name="app_name">PartyMaker</string>
    <string name="server_settings">Server Settings</string>
    <string name="password">Password</string>
    <string name="stay_connected">Stay connected!</string>
    <string name="default_web_client_id">@string/google_web_client_id_placeholder</string>
    <string name="google_web_client_id_placeholder">YOUR_WEB_CLIENT_ID</string>
    <string name="hint_email">Email</string>
    <string name="valid_email_required">Valid email required</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Login</string>
    <string name="title_slide1">About the programmer</string>
    <string name="desc_slide1">Natanel Fishman, Student, born in Israel made This application as a final project</string>
    <string name="title_slide2">The applications purpose</string>
    <string name="desc_slide2">The app was created to make order because when it comes to parties there are no apps that helps with this subject.</string>
    <string name="title_slide3">About the app</string>
    <string name="desc_slide3">The app was made by Nati Fishman as a final project</string>
    <string name="group_s_picture">Group Picture</string>
    <string name="private_party">Private Party</string>
    <string name="name">Name</string>
    <string name="create_party">Create Party</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="todo">TODO</string>
    <string name="username">username</string>
    <string name="email_userlist">email</string>
    <string name="press_here">Press Here</string>
    <string name="cake">CAKE</string>
    <string name="about_us">About Us</string>
    <string name="Login">Login</string>
    <string name="dont_have_an_account">dont have an account?</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="make_every_party_unforgettable">Make Every Party Unforgettable</string>
    <string name="partymaker">PartyMaker</string>
    <string name="logo">LOGO</string>
    <string name="admin_options">Admin Options</string>
    <string name="admin_email">Admin Email</string>
    <string name="location">Location</string>
    <string name="filter_sort">Filter and Sort</string>
    <string name="sort_and_filter">Sort and Filter</string>
    <string name="sort_by">Sort by</string>
    <string name="filter_by">Filter by</string>
    <string name="sort_date_nearest">Date (Nearest first)</string>
    <string name="sort_date_farthest">Date (Farthest first)</string>
    <string name="sort_name_az">Name (A-Z)</string>
    <string name="sort_name_za">Name (Z-A)</string>
    <string name="sort_recently_added">Recently added</string>
    <string name="filter_public_only">Public parties only</string>
    <string name="filter_private_only">Private parties only</string>
    <string name="filter_free_only">Free entry only</string>
    <string name="filter_upcoming_only">Upcoming only</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="location_pin">📍 Location</string>
    <string name="date">Date</string>
    <string name="press_to_see_time">press to see time</string>
    <string name="press_to_see_date">press to see date</string>
    <string name="entry">entry</string>
    <string name="change_price">Change Price</string>
    <string name="arrow">arrow</string>
    <string name="calendar">calendar</string>
    <string name="options">options</string>
    <string name="leave">leave</string>
    <string name="input_your_friend_s_email">Input your friend email</string>
    <string name="register_cake">Register Cake</string>
    <string name="register">Register</string>
    <string name="have_an_account">Have an account?</string>
    <string name="username_register">Username</string>
    <string name="chat_with_ai_assistant">Chat with AI Assistant</string>
    <string name="by_signing_up_you_agree_to_our_terms_of_service_and_privacy_policy">By signing up, you agree to our Terms of Service and Privacy Policy</string>
    <string name="or">or</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="username_visible_to_everyone">Username will be visible to everyone</string>
    <string name="choose_username">Choose username</string>
    <string name="minimum_6_characters">Minimum 6 characters</string>
    <string name="enter_secure_password">Enter secure password</string>
    <string name="save_location">Save Location</string>
    <string name="Chat">Chat</string>
    <string name="pick_a_date">Pick a date:</string>
    <string name="tap_to_select_date">Tap to select date</string>
    <string name="pick_an_hour">Pick an hour:</string>
    <string name="groupname">GroupName</string>
    <string name="public_group">Public Group</string>
    <string name="admin_add">Admin Add</string>
    <string name="delete_group">Delete Group</string>
    <string name="choose_a_new_date_above">Choose a new date above</string>
    <string name="type_message">type message</string>
    <string name="press_on_your_profile_picture_to_change_it">press on your profile picture to change it</string>
    <string name="entry_price">Entry price:</string>
    <string name="username_date">UserName + Date</string>
    <string name="group_name">Group Name</string>
    <string name="created_by">Created by</string>
    <string name="free">free</string>
    <string name="hello">Hello</string>
    <string name="_31">31</string>
    <string name="at">At</string>
    <string name="feb">Feb</string>
    <string name="_2018">2018</string>
    <string name="_00_00">00:00</string>
    <string name="join_group">Join Group</string>
    <string name="people_invited">People Invited</string>
    <string name="people_coming">People Coming</string>
    <string name="not_coming">Not Coming</string>
    <string name="coming">Coming</string>
    <string name="add_friends">Add Friends</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="fast">Fast ⚡</string>
    <string name="fun">Fun 🎉</string>
    <string name="need_help">Need Help?</string>
    <string name="hide_it">Hide it</string>
    <string name="got_help">Got Help?</string>
    <string name="forgot_your_password_reset_it_now">Forgot your password? Reset it now !</string>
    <string name="input_email">input email</string>
    <string name="white_screen">White Screen</string>
    <string name="black_screen">Black Screen</string>
    <string name="type_in_your_email_address_above_and_we_ll_send_you_an_email_with_instructions_on_how_to_create_a_new_password">Type in your email address above and we will send you an email with instructions on how to create a new password</string>
    <string name="_12_34">12:34</string>
    <string name="message_content">message content</string>
    <string name="sender_name">Sender Name</string>
    <string name="friends_list">Friends List</string>
    <string name="i_dont_know">I dont know</string>
    <string name="type_in_your_friend_s_email_above_and_press_add_friend_to_add_him_to_the_current_group">Type in your friend email above and press Add Friend to add him to the current group</string>
    <string name="is_he_coming_to_the_party">Is he coming to the party?</string>
    <string name="yes">Yes</string>
    <string name="add_friend">Add Friend</string>
    <string name="change_date">Change Date</string>
    <string name="secure">Secure 🔒</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="info_button">Info button</string>
    <string name="new_party_title">New Party</string>
    <string name="error_place_selection">Error Place Selection</string>
    <string name="create_group_logo">Create Group Logo</string>
    <string name="input_party_name">Input Party Name</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>
    <string name="chatgpt_icon">ChatGPT Icon</string>
    <string name="ai_assistant">AI Assistant</string>
    <string name="send">Send</string>
    <string name="help">Help</string>
    <string name="hide">Hide</string>
    <string name="hide_instructions">Hide instructions</string>
    <string name="enter_friend_email_remove">Enter the email of the friend you want to remove from the group, or select a friend from the list below.</string>
    <string name="enter_friend_email">Enter friend email</string>
    <string name="friends_in_group">Friends in group:</string>
    <string name="server_mode_settings">Server Mode Settings</string>
    <string name="use_server_mode">Use Server Mode</string>
    <string name="server_url">Server URL</string>
    <string name="server_url_default">http://10.0.2.2:8080</string>
    <string name="server_url_note">Note: Use 10.0.2.2:8080 for Android Emulator. For physical devices, use your computer IP address.</string>
    <string name="save_settings">Save Settings</string>
    <string name="map_will_open">Map will open in Google Maps app</string>
    <string name="close_map">Close Map</string>
    <string name="open_in_google_maps">Open in Google Maps</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="username_label">Username</string>
    <string name="email_example">email@example.com</string>
    <string name="admin_flag">Admin Flag</string>
    <string name="share_party">Share Party</string>
    <string-array name="array_hours">
        <item>01:00</item>
        <item>01:30</item>
        <item>02:00</item>
        <item>02:30</item>
        <item>03:00</item>
        <item>03:30</item>
        <item>04:00</item>
        <item>04:30</item>
        <item>05:00</item>
        <item>05:30</item>
        <item>06:00</item>
        <item>06:30</item>
        <item>07:00</item>
        <item>07:30</item>
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
        <item>21:30</item>
        <item>22:00</item>
        <item>22:30</item>
        <item>23:00</item>
        <item>23:30</item>
        <item>00:00</item>
        <item>00:30</item>
    </string-array>
    <string name="pay_now">Pay Now</string>
    <string name="payment_success">Payment successful!</string>
    <string name="payment_processing">Processing payment…</string>
    <string name="payment_for_party">Payment for %1$s</string>
    <string name="pull_to_pay">Swipe down to pay</string>
    <string name="group_settings">Group Settings</string>
    <string name="my_parties">My Parties</string>
    <string name="public_parties">Public Parties</string>
    <string name="profile">Profile</string>
    <string name="space" />
    <string name="remove_friend_button">Remove Friend Button</string>
    <string name="no_groups_found">No groups found</string>
    <string name="save_profile">Save Profile</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="security_scanner">Security Scanner</string>
    <string name="score_format">--/100</string>
    <string name="grade_format">Grade: -</string>
</resources>