<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/idMenu"
        android:icon="@drawable/ic_cake_purple"
        android:title="@string/my_parties"
        app:showAsAction="never" />

    <item
        android:id="@+id/idAddProfile"
        android:icon="@drawable/ic_party_join"
        android:title="@string/new_party"
        app:showAsAction="never" />

    <item
        android:id="@+id/idEditProfile"
        android:icon="@drawable/ic_party_pencil"
        android:title="@string/edit_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/idPublicParties"
        android:icon="@drawable/ic_cake"
        android:title="@string/public_parties"
        app:showAsAction="never" />

    <item
        android:id="@+id/idServerSettings"
        android:icon="@drawable/ic_party_pencil"
        android:title="@string/server_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/idLogout"
        android:icon="@drawable/ic_party_leave"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>