<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rltReset"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_party_screen"
    android:fitsSystemWindows="true"
    android:padding="16dp"
    tools:context="com.example.partymaker.ui.features.auth.ResetPasswordActivity">


    <ImageView
        android:id="@+id/imgWhiteCake"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_cake_white" />

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgWhiteCake"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/forgot_your_password_reset_it_now"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etInputEmail"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvForgotPass"
        android:layout_centerHorizontal="true"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:hint="@string/input_email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textCursorDrawable="@color/colorGray"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/etInputEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="#106e6e6e"
        android:shadowColor="#FFFFFF"
        android:shadowDx="-0"
        android:shadowDy="-0"
        android:shadowRadius="25"
        android:text="@string/reset"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#0000ffff"
        android:text="@string/white_screen"
        android:textColor="#ffffff"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#0000ffff"
        android:text="@string/black_screen"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="585dp"
        android:layout_toEndOf="@+id/tvHelp"
        android:background="#0000ffff"
        android:text="@string/press_here"
        android:textAllCaps="false"
        android:textColor="@color/primaryBlue"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tvHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="600dp"
        android:text="@string/need_help"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnHide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="585dp"
        android:layout_toEndOf="@+id/tvHide"
        android:background="#0000ffff"
        android:text="@string/hide_it"
        android:textAllCaps="false"
        android:textColor="@color/blue_primary"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvHide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="600dp"
        android:text="@string/got_help"
        android:textColor="@color/black"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etInputEmail"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:text="@string/type_in_your_email_address_above_and_we_ll_send_you_an_email_with_instructions_on_how_to_create_a_new_password"
        android:textColor="@color/black"
        android:visibility="invisible" />
</RelativeLayout>
