<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rltReset"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fitsSystemWindows="true"
    tools:context="com.example.partymaker.ui.auth.ResetPasswordActivity">


    <ImageView
        android:id="@+id/imgWhiteCake"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:contentDescription="TODO"
        app:srcCompat="@drawable/ic_cake_white" />

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgWhiteCake"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/forgot_your_password_reset_it_now"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/etInputEmail"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvForgotPass"
        android:layout_centerHorizontal="true"
        android:autofillHints=""
        android:backgroundTint="#000000"
        android:hint="@string/input_email"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textCursorDrawable="@color/colorGray"/>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@+id/etInputEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="#106e6e6e"
        android:shadowColor="#FFFFFF"
        android:shadowDx="-0"
        android:shadowDy="-0"
        android:shadowRadius="25"
        android:text="@string/reset"
        android:textColor="#000000"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnWhite"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:background="#0000ffff"
        android:text="@string/white_screen"
        android:textColor="#ffffff"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnBlack"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:background="#0000ffff"
        android:text="@string/black_screen" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="585dp"
        android:background="#0000ffff"
        android:text="@string/press_here"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/tvHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="590dp"
        android:text="@string/need_help"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btnHide"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="585dp"
        android:background="#0000ffff"
        android:text="@string/hide_it"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tvHide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="590dp"
        android:text="@string/got_help"
        android:textColor="#000000"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etInputEmail"
        android:text="@string/type_in_your_email_address_above_and_we_ll_send_you_an_email_with_instructions_on_how_to_create_a_new_password"
        android:textAlignment="center"
        android:textColor="#000000"
        android:visibility="invisible"/>
</RelativeLayout>

